<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
				 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.genexus</groupId>
	<artifactId>parent</artifactId>
	<version>2.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>GeneXus Standard Classes (Parent)</name>
	<description>Core classes for the runtime used by Java and Android apps generated with GeneXus</description>
	<url>https://github.com/genexuslabs/JavaClasses</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jersey.javax.version>2.34</jersey.javax.version>
        <jersey.jakarta.version>3.0.1</jersey.jakarta.version>
        <jackson.version>2.12.5</jackson.version>
        <junit.version>4.13.2</junit.version>
	</properties>

    <modules>
		<module>common</module>
		<module>wrapperjavax</module>
		<module>wrapperjakarta</module>
		<module>wrappercommon</module>
		<module>java</module>
		<module>gxandroidpublisher</module>
		<module>gxcryptocommon</module>
		<module>gxmail</module>
		<module>gxmaps</module>
		<module>gxoffice</module>
		<module>gxsearch</module>
		<module>javapns</module>
		<module>apacheandroid</module>
		<module>android</module>
		<module>gxgeospatial</module>
		<module>gxodata</module>
		<module>gxexternalproviders</module>
		<module>gxwebsocket</module>
		<module>gxwebsocketjakarta</module>
		<module>gxawsserverless</module>
		<module>androidreports</module>
    </modules>

	<licenses>
		<license>
			<name>Apache 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.1</version>
					<executions>
						<execution>
							<id>copy-dependencies</id>
							<phase>package</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								<outputDirectory>${project.build.directory}/libs</outputDirectory>
								<overWriteReleases>false</overWriteReleases>
								<overWriteSnapshots>false</overWriteSnapshots>
								<overWriteIfNewer>true</overWriteIfNewer>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.7</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>8</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>com.genexus</groupId>
							<artifactId>gxclassR</artifactId>
							<version>${project.version}</version>
							<destFileName>gxclassR</destFileName>
						</artifactItem>
						<artifactItem>
							<groupId>com.genexus</groupId>
							<artifactId>gxcommon</artifactId>
							<version>${project.version}</version>
							<destFileName>gxcommon</destFileName>
						</artifactItem>
					</artifactItems>
				</configuration>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>false</addClasspath>
						</manifest>
						<manifestEntries>
							<Build-Time>${maven.build.timestamp}</Build-Time>
							<Build-User>${user.name}</Build-User>
							<Build-Java>${java.version}</Build-Java>
							<Build-OS>${os.name}</Build-OS>
							<Build-Label>${project.version}</Build-Label>
							<Build-Path>${basedir}</Build-Path>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
			</plugin>
		</plugins>
	</build>
</project>
